<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Retail Profit Calculator</string>
    <string name="db_name">Stores</string>
    <string name="background">Background</string>
    <string name="logo">Logo</string>
    <string name="calculator">Calculator</string>
    <string name="store_list">Store List</string>
    <string name="new_store">New Store</string>
    <string name="store_name">Store Name</string>
    <string name="store_number">Store Number</string>
    <string name="product_list">Product List</string>
    <string name="product">Product</string>
    <string name="product_id">Product UPC</string>
    <string name="product_name">Product Name</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="calculate">Calculate</string>
    <string name="profitability_summary">Profitability Summary</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="modify_store">Modify</string>
    <string name="add_store">Add Store</string>
    <string name="view_store">View Store</string>
    <string name="view">View</string>
    <string name="view_formulas">View Formulas</string>
    <string name="selection">Make a selection</string>
    <string name="delete_store">Delete Store</string>
    <string name="update_store">Update Store</string>
    <string name="update_product">Update Product</string>
    <string name="add_product">Add Product</string>
    <string name="delete_data">Delete Product</string>
    <string name="save_file">Save File</string>
    <string name="cannot_save_file">Cannot Write to External Storage</string>
    <string name="file_name">StoreData.txt</string>
    <string name="update_store_successful">Store updated successfully</string>
    <string name="save_store_successful">Store saved successfully</string>
    <string name="delete_store_successful">Store deleted successfully</string>
    <string name="update_product_successful">Product updated successfully</string>
    <string name="save_product_successful">Product saved successfully</string>
    <string name="save_file_successful">File saved successfully</string>
    <string name="delete_product_successful">Product deleted successfully</string>
    <string name="delete_prompt">Are you sure you want to delete this?</string>
    <string name="empty_store_list">No Stores Found. Let\'s Add Some!</string>
    <string name="empty_product_list">No Products Found. Let\'s Add Some!</string>
    <string name="summary">Retail Profitability Summary</string>
    <string name="formulas">Profitability Formulas</string>
    <string name="select_app">Seleccione una aplicación de correo electrónico</string>

    <!--Validate data-->
    <string name="invalid_data">Invalid data. Try again.</string>
    <string name="store_name_required">Store name is required</string>
    <string name="store_number_required">Store number is required</string>
    <string name="product_name_required">Product name is required</string>
    <string name="cog_required">Cost of goods is required</string>
    <string name="sp_required">Selling price is required</string>
    <string name="cog_nan">Cost of goods is not a number.</string>
    <string name="sp_nan">Selling price is not a number.</string>
    <string name="aus_nan">Annual units sold is not a number.</string>
    <string name="awi_nan">Average weekly inventory is not a number.</string>
    <string name="lf_nan">Linear feet is not a number.</string>
    <string name="divide_by_zero">Divide by zero exception.</string>
    <string name="awi_greater_than_zero">Average weekly inventory must be greater than 0.</string>
    <string name="lf_greater_than_zero">Linear must be greater than 0.</string>

    <!--Formula names-->
    <string name="cost_of_goods">Cost of Goods</string>
    <string name="selling_price">Selling Price</string>
    <string name="mark_up_dollars">Mark-Up $</string>
    <string name="mark_up_percent">Mark-Up %</string>
    <string name="gm_dollars">Gross Margin $</string>
    <string name="gm_percent">Gross Margin %</string>
    <string name="inventory_turnover">Inventory Turnover</string>
    <string name="weeks_supply_of_inventory">Weeks Supply of Inventory</string>
    <string name="gmroi">GMROI</string>
    <string name="sales_per_feet">Sales Per Linear Feet</string>
    <string name="gm_linear_feet">Gross Margin $ Per Linear Feet</string>
    <string name="annual_units_sold">Annual units sold</string>
    <string name="ave_weekly_inventory">Ave Weekly Inventory</string>
    <string name="linear_ft_sales_floor">Linear Feet of Sales Floor</string>

    <!--Array of Formula names-->
    <string-array name="formulaNames">
        <item>Cost of Goods</item>
        <item>Selling Price</item>
        <item>Annual Units Sold</item>
        <item>Ave Weekly Inventory</item>
        <item>Linear Feet of Sales Floor</item>
        <item>Mark-Up $</item>
        <item>Mark-Up %</item>
        <item>Gross Margin $</item>
        <item>Gross Margin %</item>
        <item>Inventory Turnover</item>
        <item>Weeks Supply of Inventory</item>
        <item>GMROI</item>
        <item>Sales per Linear Feet</item>
        <item>GM $\'s per Linear Feet</item>
    </string-array>
</resources>
