<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storeDetailsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mybutton"
    tools:context="com.example.julieannmoore.retailprofitcalculator.AddProductActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
        <include layout="@layout/layout_list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/productEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/product"
        android:inputType="text"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/costOfGoodsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/cost_of_goods"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textIsSelectable="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/productTextView"
        />



    <EditText
        android:id="@+id/sellingPriceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/selling_price"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="18sp"/>



    <EditText
        android:id="@+id/annualUnitsSoldEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/annual_units_sold"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/aveWeeklyInventoryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/ave_weekly_inventory"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/linearFtEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="@string/linear_ft_sales_floor"
        android:inputType="numberDecimal"
        android:padding="8dp"
        android:textSize="18sp" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/gray_button"
        android:padding="8dp"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</android.support.v7.widget.LinearLayoutCompat>



