<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/secondColorAccent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5">

        <TextView
            android:id="@+id/storeDialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:text="@string/selection"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/productNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/storeDialog_title"
            android:layout_margin="8dp"
            android:text="@string/product"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textAlignment="center"/>
    </RelativeLayout>

    <include
        layout="@layout/layout_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bn_update_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:padding="8dp"
            android:text="@string/update"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bn_delete_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:background="@drawable/mybutton"
            android:padding="8dp"
            android:text="@string/delete"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bn_view_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mybutton"
            android:padding="8dp"
            android:text="@string/view"
            android:textSize="18sp" />
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>