<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/secondColorAccent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="text"
            android:id="@+id/et_store_name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/store_name"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <android.support.design.widget.TextInputEditText
            android:inputType="text"
            android:id="@+id/et_store_number"
            android:hint="@string/store_number"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInput"
        android:background="@drawable/gray_button"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textSize="18dp" />
</RelativeLayout>